313 - Related Links - fixing wrapping issue on FF

--- a/styleguide/source/assets/scss/06-theme/02-molecules/_related-action.scss
+++ b/styleguide/source/assets/scss/06-theme/02-molecules/_related-action.scss
@@ -6,13 +6,6 @@
 
   &__link {
 
-    a:hover {
-      border-bottom-color: rgba($c-font-link,.5);
-    }
-
-    svg {
-      fill: rgba($c-font-link,.5);
-    }
   }
 
   &__description {
